// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeadlessBuy error state matches snapshot in error state 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "center",
              "paddingLeft": 32,
              "paddingRight": 32,
            },
            undefined,
          ]
        }
      >
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "color": "#131416",
                "fontFamily": "Geist-Bold",
                "fontSize": 18,
                "fontWeight": 700,
                "letterSpacing": 0,
                "lineHeight": 24,
                "marginBottom": 8,
                "textAlign": "center",
              },
              undefined,
            ]
          }
        >
          fiat_on_ramp_aggregator.error
        </Text>
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "color": "#131416",
                "fontFamily": "Geist-Regular",
                "fontSize": 16,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 24,
                "marginBottom": 24,
                "textAlign": "center",
              },
              undefined,
            ]
          }
        >
          Quote fetch failed
        </Text>
        <View
          accessibilityLabel="fiat_on_ramp_aggregator.try_again"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#131416",
                "borderRadius": 12,
                "columnGap": 8,
                "flexDirection": "row",
                "height": 48,
                "justifyContent": "center",
                "minWidth": 80,
                "opacity": 1,
                "overflow": "hidden",
                "paddingLeft": 16,
                "paddingRight": 16,
                "width": "100%",
              },
              {
                "transform": [
                  {
                    "scale": 1,
                  },
                ],
              },
            ]
          }
        >
          <Text
            accessibilityRole="text"
            ellipsizeMode="clip"
            numberOfLines={1}
            style={
              [
                {
                  "color": "#ffffff",
                  "flexGrow": 0,
                  "flexShrink": 1,
                  "flexWrap": "wrap",
                  "fontFamily": "Geist-Medium",
                  "fontSize": 16,
                  "fontWeight": 400,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                  "textAlign": "center",
                },
                undefined,
              ]
            }
          >
            fiat_on_ramp_aggregator.try_again
          </Text>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`HeadlessBuy matches snapshot in loading state 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "center",
            },
            undefined,
          ]
        }
      >
        <ActivityIndicator
          size="large"
        />
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "color": "#131416",
                "fontFamily": "Geist-Regular",
                "fontSize": 16,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 24,
                "marginTop": 16,
              },
              undefined,
            ]
          }
        >
          fiat_on_ramp.fetching_quotes
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;
